--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="game/css/core.css">
+    <link rel="stylesheet" href="game/css/components.css">
+    <link rel="stylesheet" href="game/css/levels.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Placeholder for FontAwesome if needed, or use SVGs -->
 </head>
 <body>
@@ -184,10 +187,58 @@
         </div>
     </section>
 
+    <section id="expandit-game" class="section">
+        <div class="container">
+            <h2 class="section-title">ExpandIT Field Master</h2>
+            <p style="text-align: center; margin-bottom: 2rem;">Experience the workflow. Can you handle the pressure?</p>
+            
+            <div class="game-boy-frame">
+                <div class="screen-border">
+                    <div class="power-led"></div>
+                    <div class="screen" id="game-screen">
+                        <!-- Dynamic Content Here -->
+                        <div class="start-screen">
+                            <h3>Field Master</h3>
+                            <p>Press Start</p>
+                            <button id="start-btn" class="game-btn">START</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="controls">
+                    <div class="d-pad">
+                        <div class="up"></div>
+                        <div class="right"></div>
+                        <div class="down"></div>
+                        <div class="left"></div>
+                    </div>
+                    <div class="action-btns">
+                        <div class="btn-b"></div>
+                        <div class="btn-a"></div>
+                    </div>
+                    <div class="select-start">
+                        <div class="select"></div>
+                        <div class="start"></div>
+                    </div>
+                </div>
+                <div class="score-display">Score: <span id="score">0</span></div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2025 Mathias Schjødt-Bavngaard. Built with Gravity.</p>
     </footer>
 
     <script src="script.js"></script>
+    
+    <!-- Game Scripts (Loaded in order) -->
+    <script src="game/js/data.js"></script>
+    <script src="game/js/audio.js"></script>
+    <script src="game/js/levels/level1.js"></script>
+    <script src="game/js/levels/level2.js"></script>
+    <script src="game/js/levels/level3.js"></script>
+    <script src="game/js/levels/level4.js"></script>
+    <script src="game/js/levels/level5.js"></script>
+    <script src="game/js/main.js"></script>
 </body>
 </html>
